MFC r286808, r286809, r286867, r286868

-   Improve support for Macs that have a stride not equal to the
    horizonal resolution (width).
-   Support frame buffers that are larger than the default screen
    size.
-   Support large frame buffers: add 24 more page table pages we
    allocate on boot-up.

PR:		193745

Former-commit-id: 530a9d33eff75b2aa156bc4c5362b28a86ee38fa